--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,145 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #ecefe1;
+  --foreground: #101a28;
+  --font-montserrat: "Montserrat", sans-serif;
+  --font-geist-sans: "Geist Sans", ui-sans-serif, system-ui;
+  --font-geist-mono: "Geist Mono", ui-monospace, SFMono-Regular;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-secondary: #ffac20;
+  --color-primary: #00cc65;
+  --font-geist-sans: var(--font-geist-sans);
+  --font-geist-mono: var(--font-geist-mono);
+  --font-montserrat: var(--font-montserrat);
+  --shadow-hero: 0 20px 10px rgba(0, 0, 0, 0.25);
+  --shadow-button: 0 7px 10.2px rgba(0, 0, 0, 0.25);
+  --shadow-alt: 0px 10px 10px rgba(0, 0, 0, 0.25);
+  --shadow-inset: inset -10px -10px 15px rgba(0, 0, 0, 0.4);
+  --shadow-inset-full: inset 0 0 30px rgba(0, 0, 0, 0.8);
 }
 
-@media (prefers-color-scheme: dark) {
+@layer utilities {
+  .inverted-radius-tr {
+    /* variables internas */
+    --r: 20px; /* radius */
+    --s: 30px; /* size inner curve */
+    --x: 217px; /* offset X */
+    --y: 17px; /* offset Y */
+
+    /* dimensiones y fondo */
+    width: 100%;
+    /* aspect-ratio: 1; */
+    /* background: #3fb8af; */
+    border-radius: var(--r);
+
+    /* máscaras */
+    --_m: /calc(2 * var(--r)) calc(2 * var(--r)) radial-gradient(#000 70%, #0000
+          72%);
+    --_g: conic-gradient(at calc(100% - var(--r)) var(--r), #0000 25%, #000 0);
+    --_d: (var(--s) + var(--r));
+
+    mask:
+      /* top‐left corner */ calc(100% - var(--_d) - var(--x)) 0
+        var(--_m),
+      /* bottom‐right corner */ 100% calc(var(--_d) + var(--y)) var(--_m),
+      /* inner notch */
+        radial-gradient(var(--s) at 100% 0, #0000 99%, #000 calc(100% + 1px))
+        calc(-1 * var(--r) - var(--x)) calc(var(--r) + var(--y)),
+      /* conic corners */ var(--_g) calc(-1 * var(--_d) - var(--x)) 0,
+      var(--_g) 0 calc(var(--_d) + var(--y));
+    mask-repeat: no-repeat;
+  }
+
+  .inverted-radius-tl {
+    --r: 20px; /* the radius */
+    --s: 30px; /* size of inner curve */
+    --x: 217px; /* horizontal offset (no percentage) */
+    --y: 35px; /* vertical offset (no percentage) */
+
+    /* width: 100%; */
+    /* aspect-ratio: 1; */
+    /* background: #3fb8af; */
+    border-radius: var(--r);
+
+    /* masks */
+    --_m: /calc(2 * var(--r)) calc(2 * var(--r)) radial-gradient(#000 70%, #0000
+          72%);
+    --_g: conic-gradient(at var(--r) var(--r), #000 75%, #0000 0);
+    --_d: (var(--s) + var(--r));
+    mask: calc(var(--_d) + var(--x)) 0 var(--_m),
+      0 calc(var(--_d) + var(--y)) var(--_m),
+      radial-gradient(var(--s) at 0 0, #0000 99%, #000 calc(100% + 1px))
+        calc(var(--r) + var(--x)) calc(var(--r) + var(--y)),
+      var(--_g) calc(var(--_d) + var(--x)) 0,
+      var(--_g) 0 calc(var(--_d) + var(--y));
+    mask-repeat: no-repeat;
+  }
+
+  .inverted-radius-br {
+    --r: 30px; /* the radius */
+    --s: 30px; /* size of inner curve */
+    --x: 60px; /* horizontal offset (no percentane) */
+    --y: 10px; /* vertical offset (no percentage) */
+
+    width: 100%;
+    /* aspect-ratio: 1; */
+    background: #3fb8af;
+    border-radius: var(--r);
+    --_m: /calc(2 * var(--r)) calc(2 * var(--r)) radial-gradient(#000 70%, #0000
+          72%);
+    --_g: conic-gradient(
+      from 90deg at calc(100% - var(--r)) calc(100% - var(--r)),
+      #0000 25%,
+      #000 0
+    );
+    --_d: (var(--s) + var(--r));
+    mask: calc(100% - var(--_d) - var(--x)) 100% var(--_m),
+      100% calc(100% - var(--_d) - var(--y)) var(--_m),
+      radial-gradient(var(--s) at 100% 100%, #0000 99%, #000 calc(100% + 1px))
+        calc(-1 * var(--r) - var(--x)) calc(-1 * var(--r) - var(--y)),
+      var(--_g) calc(-1 * var(--_d) - var(--x)) 0,
+      var(--_g) 0 calc(-1 * var(--_d) - var(--y));
+    mask-repeat: no-repeat;
+  }
+}
+
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-montserrat);
+}
+
+.my-masonry-grid {
+  display: flex;
+  margin-left: -1rem;
+  width: auto;
+}
+
+.my-masonry-grid_column {
+  padding-left: 1rem;
+  background-clip: padding-box;
+}
+
+.my-masonry-grid_column > a {
+  margin-bottom: 1rem;
+}
+
+.my-masonry-grid_column:nth-child(1) {
+  flex: 0 0 40%;
+}
+
+.my-masonry-grid_column:nth-child(2) {
+  flex: 0 0 60%;
 }
