--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,6 +106,19 @@
       var(--_g) 0 calc(-1 * var(--_d) - var(--y));
     mask-repeat: no-repeat;
   }
+
+  /*  @media (max-width: 768px) {
+    .inverted-radius-tr {
+    }
+    .inverted-radius-tl {
+    }
+    .inverted-radius-br {
+      --r: 12px;
+      --s: 18px;
+      --x: 80px;
+      --y: 8px;
+    }
+  } */
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -142,4 +155,13 @@ body {
 
 .my-masonry-grid_column:nth-child(2) {
   flex: 0 0 60%;
+}
+
+@media screen and (max-width: 600px) {
+  .my-masonry-grid {
+    display: flex;
+    flex-direction: column;
+    margin-left: -1rem;
+    width: auto;
+  }
 }
